@@ -1,6 +1,6 @@
 #!/usr/bin/env gosh
 ;; Communicate to kahua application server
-;; $Id: kahua.cgi.in,v 1.33 2005/10/08 05:19:52 cut-sea Exp $
+;; $Id: kahua.cgi.in,v 1.34 2006/04/03 02:51:24 bizenn Exp $
 
 ;; This cgi script is kicked by httpd and pass through the request
 ;; to one of kahua servers.
@@ -41,8 +41,7 @@
 
 ;; Change this if you're using non-default sockbase
 (define *sockbase* "unix:##KAHUA_SOCKET_BASE##")
-(define *tmpbase*
-        (build-path (ref (kahua-config) 'working-directory) "tmp" "kahua-"))
+(define *tmpbase* "##localstatedir##/tmp/kahua-")
 
 ;; Change this if you're using non-default log path
 ;;(log-open "/tmp/kahua-cgi.log" :prefix "~Y ~T ~P[~$]: ")
