@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: config.scm.in,v 1.6 2005/08/24 02:29:16 nobsun Exp $
+;; $Id: config.scm.in,v 1.7 2006/04/03 02:51:24 bizenn Exp $
 ;;
 ;; This is intended to be loaded by kahua servers to share common
 ;; configuration parameters.
@@ -57,7 +57,7 @@
    ;;     Httpd must be able to show the contents under this directory.
    ;;     This directoy must be writable by kahua processes.
    (static-document-path :init-keyword :static-document-path
-                         :init-value "##KAHUA_WWW_DIR##")
+                         :init-value "##KAHUA_STATICDIR##")
 
    ;; static-document-url - the url path to reference the contents of
    ;;     static-document-path via httpd.
